seaqt/QtCore/gen_qmessageauthenticationcode.h

class QIODevice;
class QMessageAuthenticationCode;
typedef struct QIODevice QIODevice;
typedef struct QMessageAuthenticationCode QMessageAuthenticationCode;
QMessageAuthenticationCode* QMessageAuthenticationCode_new_method(int method);
QMessageAuthenticationCode* QMessageAuthenticationCode_new_method_key(int method, struct seaqt_string key);
void QMessageAuthenticationCode_swap(QMessageAuthenticationCode* self, QMessageAuthenticationCode* other);
void QMessageAuthenticationCode_reset(QMessageAuthenticationCode* self);
void QMessageAuthenticationCode_setKey(QMessageAuthenticationCode* self, struct seaqt_string key);
void QMessageAuthenticationCode_addData_data_length(QMessageAuthenticationCode* self, const char* data, ptrdiff_t length);
void QMessageAuthenticationCode_addData_data(QMessageAuthenticationCode* self, struct seaqt_string data);
bool QMessageAuthenticationCode_addData_device(QMessageAuthenticationCode* self, QIODevice* device);
struct seaqt_string QMessageAuthenticationCode_resultView(const QMessageAuthenticationCode* self);
struct seaqt_string QMessageAuthenticationCode_result(const QMessageAuthenticationCode* self);
struct seaqt_string QMessageAuthenticationCode_hash(struct seaqt_string message, struct seaqt_string key, int method);